--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,33 +9,43 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css">
   <link rel="stylesheet" href="./main.css">
 </head>
+
 <body>
 
   <!-- HEADER -->
-  <div class="header">
+  <header>
     <div class="inner">
       <a href="/" class="logo">
-        <img src="" alt="">
+        <img src="" alt="BOOKWORM">
       </a>
+      <div class="sub-menu">
+
+      </div>
     </div>
 
-    <div class="sub-menu">
-        <ul class="menu">
-          <li>
-            <a href="javascript:void(0)">소설</a>
-          </li>
-          <li>
-            <a href="javascript:void(0)">과학</a>
-          </li>
-          <li>
-            <a href="javascript:void(0)">경제</a>
-          </li>
-          <li>
-            <a href="javascript:void(0)">에세이</a>
-          </li>
-        </ul>
-    </div>
 
+
+  </header>
+
+  <div class="bw-head">
+    <div class="inner">
+      <ul class="menu">
+        <li>
+          <a href="javascript:void(0)">소설</a>
+        </li>
+        <li>
+          <a href="javascript:void(0)">과학</a>
+        </li>
+        <li>
+          <a href="javascript:void(0)">경제</a>
+        </li>
+        <li>
+          <a href="javascript:void(0)">에세이</a>
+        </li>
+      </ul>
+    </div>
   </div>
+
 </body>
+
 </html>
